@@ -220,7 +220,8 @@ grub_video_gop_iterate (int (*hook) (const struct grub_video_mode_info *info))
 
 static grub_err_t
 grub_video_gop_setup (unsigned int width, unsigned int height,
-		      unsigned int mode_type, unsigned int mode_mask __attribute__ ((unused)))
+		      unsigned int mode_type,
+		      unsigned int mode_mask __attribute__ ((unused)))
 {
   unsigned int depth;
   struct grub_efi_gop_mode_info *info = NULL;
